--- a/d3.html
+++ b/d3.html
@@ -5,7 +5,7 @@
         <title>D3 Example</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="d3.v4.js"></script>
-        <script defer src="shapes.js"></script>
+        <script defer src="stack.js"></script>
     </head>
     <body>
     </body>
