functioning gauge but color filling solid

--- a/d3.html
+++ b/d3.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset='utf-8'>
-        <title>D3 Example</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>D3</title>
+        <link rel="stylesheet" type="text/css" href="gaugeStyle.css">
         <script src="d3.v4.js"></script>
-        <script defer src="stack.js"></script>
+        <script defer src="gauge.js"></script>
     </head>
     <body>
     </body>
