efficiency chart - in middle of refactoring for DRYness

--- a/d3.html
+++ b/d3.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset='utf-8'>
         <title>D3</title>
-        <link rel="stylesheet" type="text/css" href="gaugeStyle.css">
+        <link rel="stylesheet" type="text/css" href="efficiencyStyle.css">
         <script src="d3.v4.js"></script>
-        <script defer src="gauge.js"></script>
+        <script defer src="efficiencyChart.js"></script>
     </head>
     <body>
-        <h1>VS Code Code</h1>
+        <h1 >VS Code</h1>
     </body>
 </html>
